# OpenCraft

./: CMakeLists.txt
include/: application.h  camera.h  chunk.h  mesh.h  noise.h  perlin.h  renderer.h  shader.h  transform.h  world.h
include/glad/: glad.h
res/: shader.frag  shader.vert
res/textures/: image.py  tile.xcf
src/: application.cpp  camera.cpp  chunk.cpp  glad.c  main.cpp  mesh.cpp  perlin.cpp  shader.cpp  transform.cpp  world.cpp
